# 121731_diarization

./: .gitignore  README.md  main.py  pyproject.toml  test.py  test2.py  test3.py
model/: classification_model.py  train.py
model/weights/: model_weights.pth
utils/: chart_helpers.py  rtcvad_helpers.py
