[tool.poetry]
name = "121731-diarization"
version = "0.1.0"
description = ""
authors = ["V-outsider <voutsider@tutanota.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.40.2"
scipy = "^1.14.1"
matplotlib = "^3.9.3"
sounddevice = "^0.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
